Add a few OVB jobs to experimental pipeline
Change-Id: I3a4fb5e9c586faee0f561c0753c45599db7a3036

--- a/zuul.d/project-templates.yaml
+++ b/zuul.d/project-templates.yaml
@@ -151,6 +151,9 @@
         - tripleo-ci-centos-8-ovb-3ctlr_1comp_1supp-featureset039
         - tripleo-ci-centos-7-ovb-3ctlr_1comp-featureset001
         - tripleo-ci-centos-8-ovb-3ctlr_1comp-featureset001
+        - tripleo-ci-centos-8-ovb-3ctlr_1comp-featureset001-wallaby-branch
+        - tripleo-ci-centos-8-ovb-3ctlr_1comp-featureset001-ussuri-branch
+        - tripleo-ci-centos-8-ovb-3ctlr_1comp-featureset001-train-branch
 
 - project-template:
     name: ovb-001-experimental
