Fix c7 ovb job definition
Add train branch to c7 OVB job to allow it to run on train check.
Remove it from deprecated.
Change-Id: I602245940ab7fc837f1527515ccc40fc46f875b0

--- a/zuul.d/ovb-jobs.yaml
+++ b/zuul.d/ovb-jobs.yaml
@@ -28,6 +28,14 @@
       featureset: '001'
 
 - job:
+    name: tripleo-ci-centos-7-ovb-3ctlr_1comp-featureset001
+    parent: tripleo-ci-base-ovb-rdo
+    branches: ^(stable/(newton|ocata|pike|queens|stein|train)).*$
+    vars:
+      nodes: 3ctlr_1comp
+      featureset: '001'
+
+- job:
     name: tripleo-ci-centos-7-ovb-3ctlr_1comp-featureset001-ovb-master
     parent: tripleo-ci-centos-7-ovb-3ctlr_1comp-featureset001
     branches: ^master$
