add project template for fs035
Related Review:
https://review.rdoproject.org/r/c/config/+/34930

Related-Bug: #1939023
Change-Id: I3a44cc566929e60b3913faab9a2a726771351bb9

--- a/zuul.d/project-templates.yaml
+++ b/zuul.d/project-templates.yaml
@@ -141,6 +141,14 @@
               - manifests/profile/base/neutron/plugins/ovs/opendaylight.pp
               - tox.ini
 
+# TripleO CI templates - fs35
+- project-template:
+    name: tripleo-ovb-fs35
+    openstack-check:
+      jobs:
+        - tripleo-ci-centos-8-ovb-3ctlr_1comp-featureset035:
+            irrelevant-files: *fs001_irrelevant_files
+
 - project-template:
     name: ovb-experimental
     openstack-experimental:
