--- a/zuul.d/ovb-jobs.yaml
+++ b/zuul.d/ovb-jobs.yaml
@@ -83,29 +83,6 @@
       cloud_name: vexxhost
 
 - job:
-    name: tripleo-ci-centos-7-ovb-1ctlr_2comp-featureset020-queens
-    parent: tripleo-ci-base-ovb-rdo
-    branches: ^master$
-    override-checkout: "stable/queens"
-    timeout: 18000
-    vars:
-      nodes: 1ctlr_2comp
-      featureset: '020'
-      branch_override: "stable/queens"
-
-
-- job:
-    name: tripleo-ci-centos-7-ovb-1ctlr_2comp-featureset020-stein
-    parent: tripleo-ci-base-ovb-rdo
-    branches: ^master$
-    override-checkout: "stable/stein"
-    timeout: 18000
-    vars:
-      nodes: 1ctlr_2comp
-      featureset: '020'
-      branch_override: "stable/stein"
-
-- job:
     name: tripleo-ci-centos-7-ovb-1ctlr_2comp-featureset020-train
     parent: tripleo-ci-centos-7-ovb-1ctlr_2comp-featureset020-stein
     override-checkout: "stable/train"
@@ -151,12 +128,11 @@
     vars:
       branch_override: "stable/queens"
 
-
 - job:
     name: tripleo-ci-centos-7-ovb-1ctlr_2comp-featureset020
     parent: tripleo-ci-base-ovb-rdo
     timeout: 18000
-    branches: ^(stable/(newton|ocata|pike|queens|rocky|stein|train)).*$
+    branches: ^(stable/(train)).*$
     vars:
       nodes: 1ctlr_2comp
       featureset: '020'
@@ -169,31 +145,6 @@
     vars:
       nodes: 1ctlr_2comp
       featureset: '020'
-
-- job:
-    name: tripleo-ci-centos-7-ovb-1ctlr_1comp-featureset022
-    parent: tripleo-ci-base-ovb-rdo
-    branches: ^stable/pike$
-    vars:
-      nodes: 1ctlr_1comp
-      featureset: '022'
-
-- job:
-    name: tripleo-ci-centos-7-ovb-1ctlr_2comp-featureset021
-    parent: tripleo-ci-base-ovb-rdo
-    branches: ".*"
-    timeout: 18000
-    vars:
-      nodes: 1ctlr_2comp
-      featureset: '021'
-
-- job:
-    name: tripleo-ci-centos-7-ovb-1ctlr_1comp_1ceph-featureset024
-    parent: tripleo-ci-base-ovb-rdo
-    branches: ^stable/pike$
-    vars:
-      nodes: 1ctlr_1comp_1ceph
-      featureset: '024'
 
 - job:
     name: tripleo-ci-centos-7-ovb-3ctlr_1comp-featureset041
@@ -436,38 +387,6 @@
       release: queens
 
 - job:
-    name: periodic-tripleo-ci-centos-7-ovb-1ctlr_2comp-featureset020-master
-    parent: tripleo-ci-base-ovb-periodic
-    timeout: 18000
-    vars:
-      nodes: 1ctlr_2comp
-      featureset: '020'
-      release: master
-
-- job:
-    name: periodic-tripleo-ci-centos-7-ovb-1ctlr_2comp-featureset020-queens
-    parent: tripleo-ci-base-ovb-periodic
-    override-checkout: "stable/queens"
-    timeout: 18000
-    vars:
-      nodes: 1ctlr_2comp
-      featureset: '020'
-      branch_override: "stable/queens"
-      release: queens
-
-
-- job:
-    name: periodic-tripleo-ci-centos-7-ovb-1ctlr_2comp-featureset020-stein
-    parent: tripleo-ci-base-ovb-periodic
-    timeout: 18000
-    override-checkout: "stable/stein"
-    vars:
-      nodes: 1ctlr_2comp
-      featureset: '020'
-      branch_override: "stable/stein"
-      release: stein
-
-- job:
     name: periodic-tripleo-ci-centos-7-ovb-1ctlr_2comp-featureset020-train
     parent: periodic-tripleo-ci-centos-7-ovb-1ctlr_2comp-featureset020-master
     override-checkout: "stable/train"
@@ -491,29 +410,6 @@
     vars:
       branch_override: "stable/train"
       release: train
-
-- job:
-    name: periodic-tripleo-ci-centos-7-ovb-1ctlr_2comp-featureset021-stein
-    parent: tripleo-ci-base-ovb-periodic
-    timeout: 18000
-    override-checkout: "stable/stein"
-    vars:
-      nodes: 1ctlr_2comp
-      featureset: '021'
-      branch_override: "stable/stein"
-      release: stein
-
-
-- job:
-    name: periodic-tripleo-ci-centos-7-ovb-1ctlr_2comp-featureset021-queens
-    parent: tripleo-ci-base-ovb-periodic
-    timeout: 18000
-    override-checkout: "stable/queens"
-    vars:
-      nodes: 1ctlr_2comp
-      featureset: '021'
-      branch_override: "stable/queens"
-      release: queens
 
 # legacy-periodic-tripleo-ci-centos-7-ovb-3ctlr_1comp-featureset035-master
 - job:
